--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     -->
     <properties>
         <bundle.namespace>org.nrnb.gsoc.enrichment</bundle.namespace>
-        <cytoscape.api.version>3.8.0</cytoscape.api.version>
+        <cytoscape.api.version>3.9.0</cytoscape.api.version>
         <maven-bundle-plugin.version>3.5.0</maven-bundle-plugin.version>
         <maven-compiler-plugin.version>3.2</maven-compiler-plugin.version>
         <osgi.api.version>4.2.0</osgi.api.version>
@@ -54,8 +54,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
 
@@ -129,24 +129,27 @@
 
         <!-- Cytoscape stuff -->
         <dependency>
+            <optional>true</optional>
             <groupId>org.cytoscape</groupId>
             <artifactId>swing-application-api</artifactId>
             <version>${cytoscape.api.version}</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
+            <optional>true</optional>
             <groupId>org.cytoscape</groupId>
             <artifactId>work-api</artifactId>
             <version>${cytoscape.api.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <optional>true</optional>
             <groupId>org.cytoscape</groupId>
             <artifactId>service-api</artifactId>
             <version>${cytoscape.api.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <optional>true</optional>
             <groupId>org.cytoscape</groupId>
             <artifactId>swing-app-api</artifactId>
             <version>${cytoscape.api.version}</version>
