--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <properties>
         <bundle.namespace>org.nrnb.gsoc.enrichment</bundle.namespace>
         <cytoscape.api.version>3.9.0</cytoscape.api.version>
-        <maven-bundle-plugin.version>3.5.0</maven-bundle-plugin.version>
+        <maven-bundle-plugin.version>5.1.8</maven-bundle-plugin.version>
         <maven-compiler-plugin.version>3.2</maven-compiler-plugin.version>
         <osgi.api.version>4.2.0</osgi.api.version>
     </properties>
@@ -79,8 +79,9 @@
                         <Bundle-Activator>${bundle.namespace}.CyActivator</Bundle-Activator>
                         <Embed-Dependency>*;scope=!provided</Embed-Dependency>
                         <Embed-Transitive>true</Embed-Transitive>
-                        <Import-Package>*;resolution:=optional</Import-Package>
+                        <Import-Package>!java.*,*;resolution:=optional</Import-Package>
                     </instructions>
+                    <niceManifest>true</niceManifest>
                 </configuration>
             </plugin>
         </plugins>
@@ -129,27 +130,24 @@
 
         <!-- Cytoscape stuff -->
         <dependency>
-            <optional>true</optional>
             <groupId>org.cytoscape</groupId>
             <artifactId>swing-application-api</artifactId>
             <version>${cytoscape.api.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
-            <optional>true</optional>
             <groupId>org.cytoscape</groupId>
             <artifactId>work-api</artifactId>
             <version>${cytoscape.api.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <optional>true</optional>
             <groupId>org.cytoscape</groupId>
             <artifactId>service-api</artifactId>
             <version>${cytoscape.api.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <optional>true</optional>
             <groupId>org.cytoscape</groupId>
             <artifactId>swing-app-api</artifactId>
             <version>${cytoscape.api.version}</version>
